# abs

./: .gitignore  AUTHORS.rst  CMakeLists.txt  CMakeLists_1.txt  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  runtime.py  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: continuous.yml  macos.yml  release.yml  ubuntu.yml  wheels.yml  windows.yml
abs/: __init__.py  curve.py  main.py  main_ply.py  new_format.py  new_main.py  no_name.py  part_processor.py  sampler.py  shape.py  surface.py  surface_sampler.py  test.py  topology.py  topology_new.py  utils.py  winding_number.py
abs/attic/: part_processor.py  topology.py
abs/data/sample_hdf5/: Circle.hdf5  Cylinder_Hole.hdf5  test1.hdf5  test11.hdf5  test13.hdf5  test14.hdf5  test15.hdf5  test16.hdf5  test17.hdf5  test18.hdf5  test2.hdf5  test20.hdf5  test22.hdf5  test25.hdf5  test26.hdf5  test29.hdf5  test30.hdf5  test5.hdf5  test8.hdf5  test9.hdf5
abs/geometry/: __init__.py  curve.py  surface.py
abs/sampling/: __init__.py  curve_sampler.py  poisson_downsample.py  surf_sampler.py  surface_sampler.py
abs/topology/: topology.py
abs/winding_number/: __init__.py  winding_number.py
attic/: cli.py  common.py  config_loader.py  main.py  shape.py  shape_analysis.py
attic/utilities/: __init__.py  file_io.py
cpp/: hdf5_reader.cpp  hdf5_reader.hpp  nanospline.cmake  poisson_disk_downsample.cpp  pybind11.cmake
data/processed/: 7778_3a9748b3_0019_1.hdf5_part_0.pkl  7778_3a9748b3_0023_2.hdf5_part_0.pkl  7778_3a9748b3_0025_1.hdf5_part_0.pkl
data/sample_hdf5/: Circle.hdf5  Cylinder_Hole.hdf5  Cylinder_Hole_Fillet.hdf5  Cylinder_Hole_Fillet_Chamfer.hdf5  Cylinder_SurfaceRevo.hdf5  Cylinder_Wedge.hdf5  Ellipse.hdf5  SingleSolidSphere.hdf5  Sphere.hdf5  test1.hdf5  test10.hdf5  test21.hdf5  test23.hdf5  test24.hdf5  test27.hdf5  test28.hdf5  test6.hdf5  test7.hdf5
docs/: common.md  hdf5_mesh_sampler.md  index.md  usage.md
hdf5_mesh_sampler/: Shape.py  Shape_archive.py  __init__.py  common.py  config_loader.py  hdf5_mesh_sampler.py  main.py  shape_analysis.py  shape_core.py  shape_sampling.py
hdf5_mesh_sampler/config/: config.json
hdf5_mesh_sampler/data/sample_hdf5/: Cone.hdf5  Cylinder_Hole_Fillet.hdf5  Cylinder_Hole_Fillet_Chamfer.hdf5  Cylinder_SurfaceRevo.hdf5  Cylinder_Wedge.hdf5
hdf5_mesh_sampler/geometry/: __init__.py  curve.py  surface.py
hdf5_mesh_sampler/sampling/: __init__.py  curve_sampler.py  sampler.py  surface_sampler.py
hdf5_mesh_sampler/shape/: __init__.py
hdf5_mesh_sampler/tests/: test_curve.py  test_surface.py
hdf5_mesh_sampler/topology/: __init__.py  topology.py
hdf5_mesh_sampler/utilities/: __init__.py  down_sampling_utils.py  file_io.py  math_utils.py
hdf5_mesh_sampler/winding_number/: winding_number.py
test/: __init__.py  export_shapes.py  sampling_unit_test.py  shape_test.py  test.py  test_application.py  test_geometry.py  test_hdf5_input.py  test_sampling.py  test_shape.py  test_topology.py  test_utilities.py
test/utils/: __init__.py  export_shapes.py  test_utilities.py
tests/: __init__.py  export_shapes.py  geometry_unit_test.py  hdf5_input_unit_test.py  sampling_unit_test.py  shape_test.py  test_hdf5_mesh_sampler.py  test_utilities.py  topology_unit_test.py
